--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "gulp-cssnano": "^2.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0"
+  },
+  "dependencies": {
+    "gulp-livereload": "^3.8.1"
   }
 }
