--- a/src/root-files/.htaccess
+++ b/src/root-files/.htaccess
@@ -14,6 +14,7 @@ RewriteRule ^artists\/?$ ./category.php?table=artists
 RewriteRule ^events\/?$ ./category.php?table=events
 RewriteRule ^projects\/?$ ./category.php?table=projects
 RewriteRule ^sponsors\/?$ ./category.php?table=sponsors
+RewriteRule ^partners\/?$ ./category.php?table=partners
 
 # Singles:
 RewriteRule ^artists\/(.*)$ ./single.php?table=artists&slug=$1
