--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "codame-website",
-  "version": "1.0.0",
-  "description": "Codame Website",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CODAME/codame-website.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/CODAME/codame-website/issues"
-  },
-  "homepage": "https://github.com/CODAME/codame-website#readme",
-  "devDependencies": {
-    "gulp": "3.9.1",
-    "gulp-autoprefixer": "^6.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-livereload": "^3.8.1",
-    "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.1",
-    "gulp-watch": "^5.0.1"
-  }
+	"name": "codame-website",
+	"version": "1.0.0",
+	"description": "Codame Website",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/CODAME/codame-website.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/CODAME/codame-website/issues"
+	},
+	"homepage": "https://github.com/CODAME/codame-website#readme",
+	"devDependencies": {
+		"gulp": "~3.9.1",
+		"gulp-autoprefixer": "^6.0.0",
+		"gulp-concat": "^2.6.1",
+		"gulp-livereload": "^3.8.1",
+		"gulp-notify": "^3.2.0",
+		"gulp-plumber": "^1.2.0",
+		"gulp-rename": "^1.4.0",
+		"gulp-sass": "^4.0.1",
+		"gulp-watch": "^5.0.1"
+	}
 }
